--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 ---
 layout: default
 ---
-
-<div class="description-section">
-
+<div class="description-section container">
+  <h2 class="page-description">
+  Kioshi Pictures is a clever young film studio in New Orleans. <br> We specialize in digital experiences like our Micro Cinema project
+  </h2>
+</div>
+<div class="details-section container">
+	<ul class="page-portals">
+		<li>
+		</li>
+		<li>
+		</li>
+		<li>
+		</li>
+		<li>
+		</li>
+	</ul>
 </div>
