--- a/index.html
+++ b/index.html
@@ -1,20 +1,15 @@
 ---
 layout: default
 ---
-<div class="description-section container">
-  <h2 class="page-description">
-  Kioshi Pictures is a clever young film studio in New Orleans. <br> We specialize in digital experiences like our Micro Cinema project
-  </h2>
-</div>
-<div class="details-section container">
-	<ul class="page-portals">
-		<li>
-		</li>
-		<li>
-		</li>
-		<li>
-		</li>
-		<li>
-		</li>
-	</ul>
+<div class="row description-section">
+    <div class="container col m4">
+        <p class="page-description">
+        Kioshi Pictures is a brash young film studio in New Orleans. <br> We specialize in digital experiences like our Micro Cinema project.
+        </p>
+    </div>
+    <div class="preview-section col m8">
+        <div class="video-container">
+            <video></video>
+        </div>
+    </div>
 </div>
