--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <div class="row description-section">
     <div class="container col m4">
         <p class="page-description">
-        Kioshi Pictures is a brash young film studio in New Orleans. <br> We specialize in digital experiences like our Micro Cinema project.
+        Kioshi Pictures is a brash multidisciplinary studio in New Orleans. <br> We specialize in digital experiences like our Micro Cinema project.
         </p>
     </div>
     <div class="preview-section col m8">
