:space_invader: reworked cat hero

--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 ---
 layout: default
 ---
+<div class="market-hero">
+
+</div>
+
+  
 <div class="row description-section">
-    <div class="container col m4">
+    <div class="container col m5">
         <p class="page-description">
         Kioshi Pictures is a brash multidisciplinary studio in New Orleans. <br> We specialize in digital experiences like our Micro Cinema project.
         </p>
     </div>
-    <div class="preview-section col m8">
-        <div class="video-container">
-            <video></video>
+<div class="kioshi cat-hero col s7">
+    <div class="row">
+        <object class="kioshi-cat col s12" type="image/svg+xml" data="/images/kioshi.svg" alt="Kioshi"></object>
+    </div>
+    <div class="row">
+        <div class="main-header-content inner">
+        <h1 class="page-title">Kioshi Pictures</h1>
         </div>
     </div>
+</div>    
 </div>
