:space_invader: close on the marketing item hover effect

--- a/index.html
+++ b/index.html
@@ -2,7 +2,44 @@
 layout: default
 ---
 <div class="market-hero">
-
+    <div class="market-content">
+        <div class="col m3 s3 market-item">
+            <div class="market-item-inner">
+                <a class="market-select">
+                    <div class="item-text">
+                            <h4>test</h4>
+                            <h4>test</h4>
+                            <p>test</p>
+                    </div>
+                    <img src="images/1.jpg" class="market-item-display" alt="">    
+                </a> 
+            </div>
+        </div>
+        <div class="col m3 s3 market-item">
+            <div class="market-item-inner">
+                <a class="market-select">
+                    <div class="item-text">
+                            <h4>test</h4>
+                            <h4>test</h4>
+                            <p>test</p>
+                    </div>
+                    <img src="images/2.jpg" class="market-item-display" alt="">    
+                </a> 
+            </div>
+        </div>
+        <div class="col m3 s3 market-item">
+            <div class="market-item-inner">
+                <a class="market-select">
+                    <div class="item-text">
+                            <h4>test</h4>
+                            <h4>test</h4>
+                            <p>test</p>
+                    </div>
+                    <img src="images/3.jpg" class="market-item-display" alt="">    
+                </a> 
+            </div>
+        </div>
+    </div>
 </div>
 
   
